add section testimonial

--- a/src/index.html
+++ b/src/index.html
@@ -1603,7 +1603,171 @@
             <!-- shap -->
         </div>
     </section>
-    <section class="testimonial"></section>
+    <section class="testimonial lg:pt-15 lg:pb-15 pt-10 pb-10">
+        <div class="container mx-auto px-5 py-5">
+            <div class="flex lg:flex-row flex-col justify-between lg:items-center gap-4 lg:pb-15 pb-10">
+                <div class="lg:max-w-[410px]">
+                    <p class="text-[var(--secondary-foreground)] font-bubblegum-sans text-[19px] wow animate__animated animate__fadeInUp">Clients
+                        Testimonial</p>
+                    <h2 class="font-bold lg:text-[32px] md:text-[28px] text-2xl lg:leading-[130%] md:leading-[120%] leading-[110%] wow animate__animated animate__fadeInUp"
+                        data-wow-delay=".3s">Unlocking the Power of Wonderworks Child</h2>
+                </div>
+                <p class="lg:max-w-[410px]">Use receiving accounts a number a currencies and get paid like a local Use
+                    receivin accounts a number paid the most beautiful think</p>
+            </div>
+            <div
+                class="relative w-full h-full after:absolute after:left-0 after:top-0 after:lg:max-w-[calc(100%-410px)] after:md:max-w-[calc(100%-310px)] after:max-w-[calc(100%-100px)] after:w-full after:h-full after:bg-testimonial-banner after:bg-cover after:bg-no-repeat after:z-[-1]">
+                <div class="py-10">
+                    <div class="swiper testimonial-swiper max-w-[630px] w-full ml-auto mr-0">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <!-- card start -->
+                                <div class="lg:p-10 sm:p-8 py-8 sm:py-0 sm:-mr-10">
+                                    <div
+                                        class="bg-white border border-[#F2F2F2] lg:p-15 md:p-5 p-3 max-w-[630px] w-full rounded-[10px] ml-auto shadow-[0px_0px_60px_0px_rgba(0,0,0,0.05)]">
+                                        <div class="flex justify-between items-center relative z-10 lg:pb-7.5 pb-5">
+                                            <div class="flex items-center gap-5">
+                                                <img src="/assets/img/ascent-tailwind/user-1.png" alt="bg-img">
+                                                <div>
+                                                    <h5 class="md:text-2xl text-xl font-semibold md:leading-[140%]">
+                                                        Shakib Al Hasan</h5>
+                                                    <p>Marketing Manager</p>
+                                                </div>
+                                            </div>
+                                            <div class="absolute right-0 z-[-1]">
+                                                <img src="/assets/img/ascent-tailwind/quotation.png" alt="quotation"
+                                                    class="lg:w-auto w-9">
+                                            </div>
+                                        </div>
+                                        <p>Their product exceeded his my routi expectations. The the quality and
+                                            attention to detail a the a most outstanding and it has become an essential
+                                            most a education the man who can do </p>
+                                        <ul class="flex items-center gap-1 lg:pt-10 pt-5">
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i class="fa-regular fa-star text-black opacity-30 text-xl"></i>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- card end -->
+                            </div>
+                            <div class="swiper-slide">
+                                <!-- card start -->
+                                <div class="lg:p-10 sm:p-8 py-8 sm:py-0 sm:-mr-10">
+                                    <div
+                                        class="bg-white border border-[#F2F2F2] lg:p-15 md:p-5 p-3 max-w-[630px] w-full rounded-[10px] ml-auto shadow-[0px_0px_60px_0px_rgba(0,0,0,0.05)]">
+                                        <div class="flex justify-between items-center relative z-10 lg:pb-7.5 pb-5">
+                                            <div class="flex items-center gap-5">
+                                                <img src="/assets/img/ascent-tailwind/user-1.png" alt="bg-img">
+                                                <div>
+                                                    <h5 class="md:text-2xl text-xl font-semibold md:leading-[140%]">
+                                                        Shakib Al Hasan</h5>
+                                                    <p>Marketing Manager</p>
+                                                </div>
+                                            </div>
+                                            <div class="absolute right-0 z-[-1]">
+                                                <img src="/assets/img/ascent-tailwind/quotation.png" alt="quotation"
+                                                    class="lg:w-auto w-9">
+                                            </div>
+                                        </div>
+                                        <p>Their product exceeded his my routi expectations. The the quality and
+                                            attention to detail a the a most outstanding and it has become an essential
+                                            most a education the man who can do </p>
+                                        <ul class="flex items-center gap-1 lg:pt-10 pt-5">
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i class="fa-regular fa-star text-black opacity-30 text-xl"></i>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- card end -->
+                            </div>
+                            <div class="swiper-slide">
+                                <!-- card start -->
+                                <div class="lg:p-10 sm:p-8 py-8 sm:py-0 sm:-mr-10">
+                                    <div
+                                        class="bg-white border border-[#F2F2F2] lg:p-15 md:p-5 p-3 max-w-[630px] w-full rounded-[10px] ml-auto shadow-[0px_0px_60px_0px_rgba(0,0,0,0.05)]">
+                                        <div class="flex justify-between items-center relative z-10 lg:pb-7.5 pb-5">
+                                            <div class="flex items-center gap-5">
+                                                <img src="/assets/img/ascent-tailwind/user-1.png" alt="bg-img">
+                                                <div>
+                                                    <h5 class="md:text-2xl text-xl font-semibold md:leading-[140%]">
+                                                        Shakib Al Hasan</h5>
+                                                    <p>Marketing Manager</p>
+                                                </div>
+                                            </div>
+                                            <div class="absolute right-0 z-[-1]">
+                                                <img src="/assets/img/ascent-tailwind/quotation.png" alt="quotation"
+                                                    class="lg:w-auto w-9">
+                                            </div>
+                                        </div>
+                                        <p>Their product exceeded his my routi expectations. The the quality and
+                                            attention to detail a the a most outstanding and it has become an essential
+                                            most a education the man who can do </p>
+                                        <ul class="flex items-center gap-1 lg:pt-10 pt-5">
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i
+                                                    class="fa-solid fa-star text-[var(--primary-foreground)] text-xl"></i>
+                                            </li>
+                                            <li>
+                                                <i class="fa-regular fa-star text-black opacity-30 text-xl"></i>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!-- card end -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="testimonial-pagination"></div> -->
+            </div>
+        </div>
+    </section>
     <section class="blog"></section>
     <section class="letter"></section>
     <footer></footer>
