add section blog

--- a/src/index.html
+++ b/src/index.html
@@ -1607,7 +1607,9 @@
         <div class="container mx-auto px-5 py-5">
             <div class="flex lg:flex-row flex-col justify-between lg:items-center gap-4 lg:pb-15 pb-10">
                 <div class="lg:max-w-[410px]">
-                    <p class="text-[var(--secondary-foreground)] font-bubblegum-sans text-[19px] wow animate__animated animate__fadeInUp">Clients
+                    <p
+                        class="text-[var(--secondary-foreground)] font-bubblegum-sans text-[19px] wow animate__animated animate__fadeInUp">
+                        Clients
                         Testimonial</p>
                     <h2 class="font-bold lg:text-[32px] md:text-[28px] text-2xl lg:leading-[130%] md:leading-[120%] leading-[110%] wow animate__animated animate__fadeInUp"
                         data-wow-delay=".3s">Unlocking the Power of Wonderworks Child</h2>
@@ -1768,7 +1770,136 @@
             </div>
         </div>
     </section>
-    <section class="blog"></section>
+    <section class="blog lg:pt-15 pt-10">
+        <div class="lg:py-[120px] py-20 bg-[linear-gradient(180deg,_#FFF0E5_0%,_rgba(255,_240,_229,_0.00)_100%)]">
+            <div class="container mx-auto px-5 py-5">
+                <div>
+                    <div class="flex justify-between items-center lg:pb-15 pb-10">
+                        <div class="lg:max-w-[630px]">
+                            <p class="text-[var(--secondary-foreground)] font-bubblegum-sans text-[19px] wow animate__animated animate__fadeInUp">Latest
+                                Blog And News</p>
+                            <h2 class="font-bold lg:text-[32px] md:text-[28px] text-2xl lg:leading-[130%] md:leading-[120%] leading-[110%] wow animate__animated animate__fadeInUp"
+                                data-wow-delay=".3s">Wonderworks Child Development Center Discovery Kids Preschool</h2>
+                        </div>
+                    </div>
+                    <div class="grid lg:grid-cols-2 grid-cols-1 gap-7.5">
+                        <div class="flex flex-col gap-7.5">
+                            <!-- card start -->
+                            <div class="bg-white rounded-[10px] p-2.5 flex sm:flex-row flex-col sm:items-center gap-5 shadow-4xl wow animate__animated animate__fadeInUp"
+                                data-wow-delay=".3s">
+                                <div class="w-full sm:max-w-[210px] ">
+                                    <img src="/assets/img/ascent-tailwind/blog-1.png" alt="blog-img-1"
+                                        class="w-full h-full object-cover rounded-md">
+                                </div>
+                                <div>
+                                    <div class="lg:pb-5 md:pb-4 pb-3 flex items-center gap-5">
+                                        <p>
+                                            <i
+                                                class="fa-regular fa-calendar-days text-[var(--secondary-foreground)] mr-1 inline-block"></i>
+                                            <small>October 19, 2023</small>
+                                        </p>
+                                        <p>
+                                            <i
+                                                class="fa-regular fa-user text-[var(--secondary-foreground)] mr-1 inline-block"></i>
+                                            <small>By admin</small>
+                                        </p>
+                                    </div>
+                                    <h3 class="lg:max-w-[370px]">
+                                        <a href=""
+                                            class="md:text-2xl text-xl md:leading-[141%] leading-[120%] font-semibold hover:text-[var(--secondary-foreground)] transition-all duration-500">Empowering
+                                            Children Through Education the a Igniting</a>
+                                    </h3>
+                                    <a href="" class="inline-flex items-center gap-2.5 lg:mt-6 mt-4 group/btn">
+                                        <span
+                                            class="group-hover/btn:text-[var(--secondary-foreground)] transition-all duration-500">Read
+                                            More</span>
+                                        <span
+                                            class="group-hover/btn:ml-1 group-hover/btn:text-[var(--secondary-foreground)] transition-all duration-500">
+                                            <i class="fa-solid fa-arrow-right"></i>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <!-- card end -->
+                            <!-- card start -->
+                            <div class="bg-white rounded-[10px] p-2.5 flex sm:flex-row flex-col sm:items-center gap-5 shadow-4xl wow animate__animated animate__fadeInUp"
+                                data-wow-delay=".3s">
+                                <div class="w-full sm:max-w-[210px] ">
+                                    <img src="/assets/img/ascent-tailwind/blog-2.png" alt="img"
+                                        class="w-full h-full object-cover rounded-md">
+                                </div>
+                                <div>
+                                    <div class="lg:pb-5 md:pb-4 pb-3 flex items-center gap-5">
+                                        <p>
+                                            <i
+                                                class="fa-regular fa-calendar-days text-[var(--secondary-foreground)] mr-1 inline-block"></i>
+                                            <small>October 19, 2023</small>
+                                        </p>
+                                        <p>
+                                            <i
+                                                class="fa-regular fa-user text-[var(--secondary-foreground)] mr-1 inline-block"></i>
+                                            <small>By admin</small>
+                                        </p>
+                                    </div>
+                                    <h3 class="lg:max-w-[370px]">
+                                        <a href=""
+                                            class="md:text-2xl text-xl md:leading-[141%] leading-[120%] font-semibold hover:text-[var(--secondary-foreground)] transition-all duration-500">Empowering
+                                            Children Through Education the a Igniting</a>
+                                    </h3>
+                                    <a href="" class="inline-flex items-center gap-2.5 lg:mt-6 mt-4 group/btn">
+                                        <span
+                                            class="group-hover/btn:text-[var(--secondary-foreground)] transition-all duration-500">Read
+                                            More</span>
+                                        <span
+                                            class="group-hover/btn:ml-1 group-hover/btn:text-[var(--secondary-foreground)] transition-all duration-500">
+                                            <i class="fa-solid fa-arrow-right"></i>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                            <!-- card end -->
+                        </div>
+                        <div>
+                            <div class="bg-white rounded-[10px] flex flex-col items-start gap-5 shadow-4xl h-full wow animate__animated animate__fadeInUp"
+                                data-wow-delay=".3s">
+                                <div class="w-full">
+                                    <img src="/assets/img/ascent-tailwind/blog-3.png" alt="blog-img-3" class="w-full">
+                                </div>
+                                <div class="px-10 pb-10">
+                                    <div class="lg:pb-5 md:pb-4 pb-3 flex items-center gap-5">
+                                        <p>
+                                            <i
+                                                class="fa-regular fa-calendar-days text-[var(--secondary-foreground)] mr-1 inline-block"></i>
+                                            <small>October 19, 2023</small>
+                                        </p>
+                                        <p>
+                                            <i
+                                                class="fa-regular fa-user text-[var(--secondary-foreground)] mr-1 inline-block"></i>
+                                            <small>By admin</small>
+                                        </p>
+                                    </div>
+                                    <h3>
+                                        <a href=""
+                                            class="md:text-2xl text-xl md:leading-[141%] leading-[120%] font-semibold hover:text-[var(--secondary-foreground)] transition-all duration-500">Empowering
+                                            Children Through Education the a Igniting</a>
+                                    </h3>
+                                    <a href="" class="inline-flex items-center gap-2.5 lg:mt-6 mt-4 group/btn">
+                                        <span
+                                            class="group-hover/btn:text-[var(--secondary-foreground)] transition-all duration-500">Read
+                                            More</span>
+                                        <span
+                                            class="group-hover/btn:ml-1 group-hover/btn:text-[var(--secondary-foreground)] transition-all duration-500">
+                                            <i class="fa-solid fa-arrow-right"></i>
+                                        </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="letter"></section>
     <footer></footer>
 
