add section letter

--- a/src/index.html
+++ b/src/index.html
@@ -1776,7 +1776,9 @@
                 <div>
                     <div class="flex justify-between items-center lg:pb-15 pb-10">
                         <div class="lg:max-w-[630px]">
-                            <p class="text-[var(--secondary-foreground)] font-bubblegum-sans text-[19px] wow animate__animated animate__fadeInUp">Latest
+                            <p
+                                class="text-[var(--secondary-foreground)] font-bubblegum-sans text-[19px] wow animate__animated animate__fadeInUp">
+                                Latest
                                 Blog And News</p>
                             <h2 class="font-bold lg:text-[32px] md:text-[28px] text-2xl lg:leading-[130%] md:leading-[120%] leading-[110%] wow animate__animated animate__fadeInUp"
                                 data-wow-delay=".3s">Wonderworks Child Development Center Discovery Kids Preschool</h2>
@@ -1900,7 +1902,33 @@
             </div>
         </div>
     </section>
-    <section class="letter"></section>
+    <section class="letter bg-[linear-gradient(180deg,_rgba(238,255,200,0.00)_0%,_#E9FFB6_100%)] overflow-x-hidden">
+        <div class="bg-bottom bg-no-repeat bg-contain bg-newsletter-banner">
+            <div class="container mx-auto px-5 py-5">
+                <div class="flex lg:flex-row flex-col lg:items-center justify-between gap-7.5">
+                    <div class="max-w-[598px] w-full order-1 lg:order-0 animate-left-right">
+                        <div class="bg-[url('/assets/img/ascent-tailwind/egg-shap.png')] bg-no-repeat bg-bottom bg-contain">
+                            <img src="/assets/img/ascent-tailwind/student.png" alt="student-img" class="mx-auto">
+                        </div>
+                    </div>
+                    <div class="lg:max-w-[530px] order-0 lg:order-1">
+                        <p class="font-bubblegum-sans text-[19px] text-black wow animate__animated animate__fadeInUp">Get Connected</p>
+                        <h2 class="font-bold lg:text-[32px] md:text-[28px] text-2xl lg:leading-[130%] md:leading-[120%] leading-[110%] wow animate__animated animate__fadeInUp"
+                            data-wow-delay=".3s">Education That Sparks Imaginat Nurturing Curiosity Inspire</h2>
+                        <div class="relative lg:mt-10 mt-5">
+                            <input type="text" placeholder="Enter Your Email"
+                                class="rounded-[10px] bg-white border border-black pl-6 lg:py-7 py-4 max-h-20 w-full outline-none">
+                            <button
+                                class="bg-[var(--primary)] text-white rounded-[10px] absolute right-[10px] top-1/2 -translate-y-3.5 btn">
+                                <span>Submit</span>
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer></footer>
 
 
